# riffle

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.ru.md  Justfile  LICENSE  README.md  README.ru.md
.github/workflows/: ci.yml  debug-win.yml  release.yml
bench/: bench.py  gen_data.py  plot.py  profile_stages.cpp  results.json  threads.py  threads_results.json
build-notest/: .ninja_deps  .ninja_log  build.ninja
docs/: riffle.md
include/: riffle.hpp
include/riffle/: args.hpp  batch.hpp  constants.hpp  convert.hpp  factories.hpp  input.hpp  json_parser.hpp  nested.hpp  ports.hpp  reader.hpp  schema.hpp  schema_json.hpp  simdjson_source.hpp  stats.hpp  timestamp.hpp  types.hpp  version.hpp  writer.hpp  writer_backends.hpp
src/adapters/: batch.cpp  columnar_raw_writer.cpp  input.cpp  json_parser.cpp  nested.cpp  parquet_writer.cpp  reader.cpp  schema_json.cpp  simdjson_source.cpp  writer.cpp
src/app/: convert.cpp  stats.cpp
src/cli/: args.cpp  main.cpp
src/domain/: factories.cpp  schema.cpp  timestamp.cpp  type_resolve.cpp  types.cpp  version.cpp
tests/adapters/: batch_test.cpp  columnar_raw_writer_test.cpp  json_parser_test.cpp  nested_test.cpp  parquet_writer_test.cpp  reader_test.cpp  simdjson_source_test.cpp
tests/app/: convert_test.cpp
tests/cli/: args_test.cpp
tests/data/: sample.jsonl
tests/domain/: factories_test.cpp  infer_schema_test.cpp  merge_override_test.cpp  projection_test.cpp  schema_json_test.cpp  timestamp_test.cpp  type_resolve_test.cpp  types_test.cpp  version_test.cpp
